--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "burger-fanatics",
+  "homepage": "./",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-components": "^1.9.6",
     "@aws-amplify/ui-react": "^2.15.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
