--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -26,5 +26,24 @@
         ]
       }
     }
+  },
+  "geo": {
+    "placeindex984119c8": {
+      "isDefault": true,
+      "providerPlugin": "awscloudformation",
+      "service": "PlaceIndex",
+      "dataProvider": "HERE",
+      "dataSourceIntendedUse": "SingleUse",
+      "accessType": "AuthorizedAndGuestUsers",
+      "dependsOn": [
+        {
+          "category": "auth",
+          "resourceName": "burgerfanatics02a92540",
+          "attributes": [
+            "UserPoolId"
+          ]
+        }
+      ]
+    }
   }
 }
