--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@aws-amplify/ui-react": "^2.15.3",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@maplibre/maplibre-gl-geocoder": "^1.3.1",
     "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^4.3.19",
+    "maplibre-gl": "^1.15.3",
+    "maplibre-gl-js-amplify": "^1.4.1",
+    "path-browserify": "^1.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
