--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -28,5 +28,22 @@
     }
   },
   "geo": {},
-  "api": {}
+  "api": {
+    "burgerfanatics": {
+      "service": "AppSync",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [],
+      "output": {
+        "authConfig": {
+          "defaultAuthentication": {
+            "authenticationType": "API_KEY",
+            "apiKeyConfig": {
+              "apiKeyExpirationDays": 7
+            }
+          },
+          "additionalAuthenticationProviders": []
+        }
+      }
+    }
+  }
 }
