remove api and start iver - and fix markup of lists

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -28,22 +28,5 @@
     }
   },
   "geo": {},
-  "api": {
-    "burgerfanatics": {
-      "service": "AppSync",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": [],
-      "output": {
-        "authConfig": {
-          "defaultAuthentication": {
-            "authenticationType": "API_KEY",
-            "apiKeyConfig": {
-              "apiKeyExpirationDays": 7
-            }
-          },
-          "additionalAuthenticationProviders": []
-        }
-      }
-    }
-  }
+  "api": {}
 }
