--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aws-amplify": "^4.3.19",
     "maplibre-gl": "^1.15.3",
     "maplibre-gl-js-amplify": "^1.4.1",
+    "moment": "^2.29.3",
     "path-browserify": "^1.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
